--- a/style.css
+++ b/style.css
@@ -6,5 +6,8 @@
 }
  
  body{
-  background-color: darkmagenta;
+  background-color: rgb(90, 180, 176);
+  color: rgb(239, 228, 228);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+
  }
