--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  
  body{
   background-color: rgb(90, 180, 176);
-  color: rgb(239, 228, 228);
+  color: rgb(pink);
   font-family: Georgia, 'Times New Roman', Times, serif;
 
  }
